--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,20 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.timer {
+  display: flex;
+  flex-direction: row;
+  color: red;
+  gap: 36px;
+  padding: 36px;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+}
+
+.label {
+  font-size: 75%;
+}
